--- a/pages/chatCustomer1/chat.css
+++ b/pages/chatCustomer1/chat.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #a0a0a0;
+  background: rgb(210, 216, 216);
   padding: 0 10px;
   margin-top: -30px;
 }
